# swann

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  res.csv
.github/workflows/: sisap-ci.yml  tests.yml
benchmark/: benchmark-1677671874.csv  benchmark-1677682523.csv  benchmark-1677840696.csv  benchmark-1677845278.csv  benchmark-1678891718.csv  benchmark-1678967932.csv  benchmark-1678993398.csv  benchmark-1679483931.csv  benchmark-1679485178.csv  benchmark-1680000149.csv  benchmark-1681848534.csv  benchmark-1681848610.csv  benchmark-1681850610.csv  benchmark-1682457063.csv  benchmark-1689083546.csv  chwo_after_depth_bug.csv
benchmark/aljb/parallelized/: benchmark-1680088893.csv  benchmark-1680090255.csv
benchmark/aljb/sequential/: benchmark-1680079098.csv  (+1 more)
benchmark/chwo/: 10M_By_Optimizationsteps.csv  10M_batchqueries_batchdx100.csv  10M_bf.csv  10M_diff_steps_mthread.csv  10M_knn10_100.csv  10M_noMemleak.csv  10m_moar_data.csv  3_reps_p1p2.csv  8reps_p1p2.csv  Benchmark-Point.csv  benchmark-1683739935.csv  better-query-10M_rndbitsconcat_tdepthsubact_maxq.csv  better-query-10M_rndbitsconcat_tdepthsubact_maxq_loge1_log10-2.csv  better-query_rndbits_tdepthsubact_maxq.csv  better_query-10M_rndbitsconcat_tdepthsubact.csv  better_query-Point-Constructor-Update_SingleBit.csv  better_query-rndbitsconcat-tdepthsubactDepth.csv  better_query.csv  chwo_after_pointmap_and_mask_bug.csv  chwo_before_depth_bug.csv  chwo_rndbitsconcat_actDepth.csv  fast_point_300K.csv  rff_no_batch.csv  sisap_10M.csv
benchmark/hasc/: benchmark-1683214436.csv  benchmark-1683216636.csv  benchmark-1683216806.csv  benchmark-1683216895.csv  benchmark-1683216970.csv  benchmark-1683217313.csv  benchmark-1683217391.csv  benchmark-1683217480.csv  benchmark-1683217537.csv  benchmark-1683217619.csv  benchmark-1683217696.csv  benchmark-1683217802.csv  benchmark-1683218764.csv  benchmark-1683221007.csv  benchmark-1683222299.csv  benchmark-1683223822.csv  benchmark-after-bucketiterator.csv  benchmark-after-depth2.csv  benchmark-after-depthupdate.csv  benchmark-after-hashupdate.csv  benchmark-after-next-optimizations.csv  benchmark-after-optimized.csv  benchmark-after-pointmap.csv  benchmark-optimal.csv
data/: sisapchallenge.sh
data/laion2B-en/: .gitignore  download.sh  preprocess.py
notebooks/: Dockerfile  notebooks.Dockerfile  requirements.txt
notebooks/notebooks/: BenchmarkAnalysis.ipynb
result/: res.csv
scripts/: format_hdf5.py  run_benchmark.sh  run_sisap.sh
src/: CMakeLists.txt  global.hpp  index.hpp  main.cpp  test.cc
src/benchmark/: benchmark.cc  bucket_benchmark.cc  construct_datastructures_benchmark.cc  dataset_benchmark.cc  loaddataset_benchmark.cc  point_benchmark.cc  random_points_benchmark.cc  test_benchmark.cc
src/dataset/: dataset.hpp  load.hpp  parse.hpp
src/hash/: dependenthashfamilyfactory.hpp  hashfamily.hpp  hashfamilyfactory.hpp  hashpool.hpp  hashtype.hpp  random.hpp  sphericalhashfamily.hpp  spherichashfamily.cpp  spherichashfamily.hpp
src/index/: bfindex.hpp  bucketmask.hpp  index.hpp  lsharraymap.hpp  lshforest.hpp  lshhashmap.hpp  lshmap.hpp  lshmapfactory.hpp  lshmapprioqueue.hpp  lshtrie.hpp  old_point.hpp  point.hpp  point_fast.hpp  pointarithmeticresult.hpp
src/index/query/: failureprob.hpp  pointmap.hpp
src/sisap/: io.hpp  sisap.cpp
src/statistics/: lshmapanalyzer.hpp  statsgenerator.hpp
src/test/: test.cc
src/test/hash/: dependenthashfamilyfactory.cc  hashfamily.cc  hashfamilyfactory.cc  hashpool.cc  random.cc  spherichashfamily.cc
src/test/index/: bfindex.cc  lsharraymap.cc  lshforest.cc  lshhashmap.cc  lshmapfactory.cc  lshmapprioqueue.cc  lshtrie.cc  point.cc  point_fast.cc  pointarithmeticresult.cc  util.hpp
src/test/index/query/: failureprob.cc  pointmap.cc
src/test/util/: ranges.cc
src/util/: ranges.hpp  stream.hpp
